@@ -1,123 +1,0 @@
-<option type="enum" id="opt/GS-HalftoningAlgorithm-Gray">
-  <arg_shortname>
-    <en>HalftoningAlgorithm</en>
-  </arg_shortname>
-  <arg_longname>
-    <en>Halftoning Algorithm</en>
-  </arg_longname>
-  <arg_execution>
-    <arg_group>Adjustment</arg_group>
-    <arg_order>1000</arg_order>
-    <arg_section>PageSetup</arg_section>
-    <arg_spot>C</arg_spot>
-    <arg_substitution />
-    <arg_proto>%s</arg_proto>
-  </arg_execution>
-  <constraints>
-    <constraint sense="true">
-      <driver>coslw2p</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>coslwxl</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>deskjet</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>dj505j</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>djet500</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>gdi</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>hl1240</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>hl1250</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>hl7x0</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>laserjet</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>lj4dith</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet2p</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet3</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet3d</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet4</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet4d</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljet4pjl</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>ljetplus</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-    <constraint sense="true">
-      <driver>oki4w</driver>
-      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
-    </constraint>
-  </constraints>
-  <enum_vals>
-    <enum_val id="ev/GS-HalftoningAlgorithm-Gray-Accurate">
-      <ev_longname>
-        <en>Accurate</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>Accurate</en>
-      </ev_shortname>
-      <ev_driverval> -c '/Default &lt;&lt; /SpotFunction { 180 mul cos exch 180 mul cos add 2 div } bind /HalftoneType 1 /AccurateScreens true /Frequency 137 /Angle 37 /HalftoneName (Round Dot Screen) &gt;&gt; /Halftone defineresource sethalftone &lt;&lt; /HalftoneMode 1 /UseWTS false /AccurateScreens true &gt;&gt; setuserparams'</ev_driverval>
-    </enum_val>
-    <enum_val id="ev/GS-HalftoningAlgorithm-Gray-Standard">
-      <ev_longname>
-        <en>Standard</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>Standard</en>
-      </ev_shortname>
-      <ev_driverval></ev_driverval>
-    </enum_val>
-    <enum_val id="ev/GS-HalftoningAlgorithm-Gray-WTS">
-      <ev_longname>
-        <en>Well-Tempered Screening</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>WTS</en>
-      </ev_shortname>
-      <ev_driverval> -c '/Default &lt;&lt; /SpotFunction { 180 mul cos exch 180 mul cos add 2 div } bind /HalftoneType 1 /AccurateScreens true /Frequency 137 /Angle 37 /HalftoneName (Round Dot Screen) &gt;&gt; /Halftone defineresource sethalftone &lt;&lt; /HalftoneMode 1 /UseWTS true /AccurateScreens true &gt;&gt; setuserparams'</ev_driverval>
-    </enum_val>
-  </enum_vals>
-</option>
