@@ -1,5 +1,8 @@
 2011-08-30  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* opt/GS-HalftoningAlgorithm-Gray.xml: Removed, this option does not
+	  work any more with current Ghostscript (Ubuntu bug 659398).
+
 	* printer/Brother-HL-2070N.xml, driver/hl1250.xml,
 	  driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
 	  driver/ljet4.xml, driver/pxlmono.xml: Added the Brother HL-2070N
